--- a/style.css
+++ b/style.css
@@ -1,4 +1,13 @@
-body {
-    background-color: #39324D;
-    color: white;
+@import url(style/header.css);
+
+:root{
+    --cor-de-fundo: #c5cad6;
+}
+
+body{
+    background-color: var(--cor-de-fundo);
+}
+
+h1{
+    background-color: white;
 }
